--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,17 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/all-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/all-tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+      integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script
@@ -66,7 +72,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <form action="/tweets" method="POST">
+        <form id="post-tweet" action="/tweets" method="POST">
           <textarea
             name="text"
             id="tweet-text"
@@ -79,25 +85,7 @@
         </form>
       </section>
 
-      <section class="all-tweet">
-        <article class="tweet">
-          <header>
-            <div>Newton</div>
-            <div>@Sirlsaac</div>
-          </header>
-          <p>
-            If I have seen further it is by standing on the shoulders of giants
-          </p>
-          <footer>
-            <div>time</div>
-            <div class="icons">
-              <i class="fa-regular fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i>
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-      </section>
+      <section id="all-tweets"></section>
     </main>
   </body>
 </html>
