use .append() to show error message

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <p id="error-message" hidden></p>
+        <div id="alert"></div>
         <form id="post-tweet" action="/tweets" method="POST">
           <textarea
             name="text"
